; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_lib_ffi.c_ffi_checkint.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_lib_ffi.c_ffi_checkint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, i32* }

@LJ_ERR_NOVAL = common dso_local global i32 0, align 4
@CTID_INT32 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32)* @ffi_checkint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ffi_checkint(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %9 = call i32* @ctype_cts(%struct.TYPE_5__* %8)
  store i32* %9, i32** %5, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  %13 = load i32, i32* %4, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = getelementptr inbounds i32, i32* %15, i64 -1
  store i32* %16, i32** %6, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = icmp uge i32* %17, %20
  br i1 %21, label %22, label %27

22:                                               ; preds = %2
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %24 = load i32, i32* %4, align 4
  %25 = load i32, i32* @LJ_ERR_NOVAL, align 4
  %26 = call i32 @lj_err_arg(%struct.TYPE_5__* %23, i32 %24, i32 %25)
  br label %27

27:                                               ; preds = %22, %2
  %28 = load i32*, i32** %5, align 8
  %29 = load i32*, i32** %5, align 8
  %30 = load i32, i32* @CTID_INT32, align 4
  %31 = call i32 @ctype_get(i32* %29, i32 %30)
  %32 = load i32*, i32** %6, align 8
  %33 = load i32, i32* %4, align 4
  %34 = call i32 @CCF_ARG(i32 %33)
  %35 = call i32 @lj_cconv_ct_tv(i32* %28, i32 %31, i32* %7, i32* %32, i32 %34)
  %36 = load i32, i32* %7, align 4
  ret i32 %36
}

declare dso_local i32* @ctype_cts(%struct.TYPE_5__*) #1

declare dso_local i32 @lj_err_arg(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @lj_cconv_ct_tv(i32*, i32, i32*, i32*, i32) #1

declare dso_local i32 @ctype_get(i32*, i32) #1

declare dso_local i32 @CCF_ARG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
